<resources>
    <string name="app_name">Lideres</string>
    <string name="info">Líderes del Mañana</string>
    <string name="modeloTitulo">¿Que hacemos?</string>
    <string name="log">Log IN</string>
    <string name="infoL">LÍDERES DEL MAÑANA Tiene como objetivo
        potenciar la formación y el desarrollode jóvenes mexicanos
        talentosos que, por su condición
        económica o social, requieren un apoyo del 100% de beca
        para estudiar la carrera profesional en el Tecnológico de
        Monterrey.</string>
    <string name="modelo">Con este apliación que hemos elaborado, damos estas subscripciones para ayudar a la campaña Lideres de Mañana a recaudar fondos en sus diversas actividades. Las suscripciones se estructuran en diferentes paquetes, cada uno en su propio nivel. Y dependiendo de tus necesidades, puedes pagar una suscripción para obtener beneficios.</string>
    <string name="botonServicios">Servicios</string>
    <string name="serviciosComida">Servicios de Comida</string>
    <string name="pedirLibro">Pedir un libro</string>
    <string name="concierto">Conciertos</string>
    <string name="perfilTitulo">Tus datos de perfil</string>
    <string name="nombre">Arturo Emendez</string>
    <string name="carrera">ITC</string>
    <string name="matriculaValor">A012345678</string>
    <string name="descripcion">Tu tienes beneficios de Nivel 1.</string>
    <string name="matricula">Matricula</string>
    <string name="contraseña">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string-array name="levelarray">
        <item>Niveles</item>
        <item>Nivel 1</item>
        <item>Nivel 2</item>
        <item>Nivel 3</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>