<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.lideres.LogIn">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/matricula"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/contraseña"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/matriculaRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/matricula"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/passwordRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/contraseña"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/singin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>


</LinearLayout>
