<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.lideres.MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#068CD4"
        android:src="@drawable/lider"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:id="@+id/botonInfo"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/modelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modeloTitulo"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/botonLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>
