<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.lideres.Perfil">


    <!-- <Button
        android:id="@+id/botonServicios"
        android:text="@string/botonServicios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"/> -->

    <ImageButton
        android:id="@+id/Facebook"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/facebook"
        android:layout_above="@+id/niveles"
        android:layout_toStartOf="@+id/textView6"
        android:layout_marginBottom="70dp"
        android:layout_alignEnd="@+id/textView6" />

    <ImageButton
        android:id="@+id/twitter"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/twitter"
        android:layout_alignTop="@+id/Facebook"
        android:layout_alignParentEnd="true" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="300dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="90dp"
        android:text="@string/nombre"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignTop="@+id/textView5"
        android:layout_marginTop="56dp"
        android:text="@string/carrera"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_toEndOf="@+id/textView6"
        android:text="-"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matriculaValor"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignEnd="@+id/textView9" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/profile_default"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignBottom="@+id/textView6"
        android:layout_toStartOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="22sp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />
    <Spinner
        android:id="@+id/niveles"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/perfilTitulo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic" />

</RelativeLayout>
